Added the ability to set DDisableAuth as a jvm parameter to allow unencrypted logon to amps