@@ -186,10 +186,24 @@ task runJetFuelView(type: JavaExec) {
     args 'JetFuelView'
 }
 
+task runJetFuelViewDisableAuth(type: JavaExec) {
+    classpath = sourceSets.main.runtimeClasspath
+    main = 'headfront.jetfuelview.JetFuelView'
+    jvmArgs '-DDisableAuth=true', '-Dlog4j.configurationFile=log4j2-JetFuelView.xml', '-XX:MaxGCPauseMillis=10', '-XX:SurvivorRatio=4', '-XX:+UseConcMarkSweepGC'
+    args 'JetFuelView'
+}
+
 task runJetFuelExplorer(type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
     main = 'headfront.jetfuelview.JetFuelView'
     jvmArgs '-Dlog4j.configurationFile=log4j2-JetFuelView.xml', '-XX:MaxGCPauseMillis=10', '-XX:SurvivorRatio=4', '-XX:+UseConcMarkSweepGC'
+    args 'JetFuelExplorer'
+}
+
+task runJetFuelExplorerDisableAuth(type: JavaExec) {
+    classpath = sourceSets.main.runtimeClasspath
+    main = 'headfront.jetfuelview.JetFuelView'
+    jvmArgs '-DDisableAuth=true', '-Dlog4j.configurationFile=log4j2-JetFuelView.xml', '-XX:MaxGCPauseMillis=10', '-XX:SurvivorRatio=4', '-XX:+UseConcMarkSweepGC'
     args 'JetFuelExplorer'
 }
 
